# bigbytes

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  MANIFEST.in  README.md  README_dev.md  SUMMARY.md  aws  dev.Dockerfile  dev.spark.Dockerfile  docker-compose.yml  example.ipynb  package-lock.json  package.json  pg-docker-compose.yml  pyproject.toml  setup.py  test_branch.Dockerfile
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: build_and_test.yml  codeql-analysis.yml  export_frontend.yml  publish_docker_image.yml  publish_to_pypi.yml  trivy.yml
bigbytes/: __init__.py
bigbytes/ai/: constants.py  generator.py  generator_cmds.py  hugging_face_client.py  llm_pipeline_wizard.py  openai_client.py
bigbytes/api/: constants.py  errors.py  logging.py  middleware.py  oauth_scope.py  result_set.py  utils.py  views.py
bigbytes/authentication/: ldap.py  oauth2.py
bigbytes/autocomplete/: utils.py
bigbytes/cache/: base.py  block.py  constants.py  file.py  mem_lru.py  models.py  pipeline.py  tag.py  utils.py
bigbytes/cli/: main.py
bigbytes/cluster_manager/: config.py  constants.py  errors.py  manage.py
bigbytes/command_center/: constants.py  factory.py  models.py  service.py  settings.py
bigbytes/data/: constants.py
bigbytes/data_cleaner/: data_cleaner.py
bigbytes/data_preparation/: decorators.py  preferences.py  (+2 more)
bigbytes_integrations/: MANIFEST.in  README.md  setup.py
docs/: mint.json
kube/: app.yaml
mage_integrations/: README.md
scripts/: dev.sh  init.sh  run.sh  run_app.sh  run_ec2.sh  start.sh  test.sh
(+2068 files in other folders)
